--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -9,6 +9,15 @@ spring:
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
+
+  kafka:
+    producer:
+      bootstrap-servers: localhost:29092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.type.mapping: orderConfirmation:kafka.OrderConfirmation #mention the object that we are sending
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -20,7 +29,7 @@ spring:
           time_zone: UTC
 
 application:
-  conifg:
+  config:
     customer-url: http://localhost:8090/api/v1/customers
     #we are initially using the port of the service directly but in phase 2
     #we are going to move to connecting via an api gateway(this is essential at the time of scaling)
